# toml_const

./: Cargo.toml  LICENSE  README.md  example.toml  normalize.toml
.github/workflows/: ci.yml  crates_publish.yml
src/: cli.rs  codegen.rs  consts.rs  generator.rs  lib.rs  main.rs  package_navi.rs
src/toml_const_macros/: Cargo.toml
src/toml_const_macros/src/: check.rs  custom_struct.rs  lib.rs  parse.rs
toml_const/: Cargo.toml  README.md
toml_const/src/: lib.rs
toml_const_macros/: Cargo.toml
toml_const_macros/src/: check.rs  custom_struct.rs  instantiate.rs  lib.rs  normalize.rs  parse.rs
toml_const_tests/: Cargo.toml
toml_const_tests/src/: lib.rs
