[package]
name = "toml_const"
version = "0.1.1"
edition = "2021"
rust-version = "1.56"
description = "Compile-time constants from TOML"
readme = "README.md"
repository = "https://github.com/cruzerngz/toml_const"
license = "MIT"
keywords = ["toml", "config", "static"]
categories = ["config", "development-tools::build-utils"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "toml_const"
path = "src/lib.rs"

[dependencies]
toml = "0.8"
