[workspace]
members = ["toml_const", "toml_const_macros", "toml_const_tests"]
resolver = "2"

[workspace.package]
edition = "2021"
# remember to update macro version depended on in toml_const/Cargo.toml
version = "1.1.1"
rust-version = "1.56"

[workspace.dependencies]
toml = {version = "0.8", features = ["preserve_order"]}
indexmap = "2"