[package]
name = "toml_const"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Compile-time constants from TOML"
readme = "README.md"
repository = "https://github.com/facesthe/toml_const"
license = "MIT"
keywords = ["toml", "config", "static"]
categories = ["no-std", "config", "development-tools::build-utils"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "toml_const"
path = "src/lib.rs"

[dependencies]
toml = "0.8"
macros = { path = "../toml_const_macros", package = "toml_const_macros", version = "1.0.0" }
