[package]
name = "toml_const_macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "proc-macros for toml_const"
repository = "https://github.com/facesthe/toml_const"
license = "MIT"
keywords = []
categories = ["development-tools::build-utils"]

[lib]
proc-macro = true

[dependencies]
syn = "2"
quote = "1"
proc-macro2 = "1"
toml = "0.8"
